# forgekit

./: .env.example  .gitignore  .gitmessage.txt  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
apps/discord-gateway/: README.md  pyproject.toml
apps/discord-gateway/tests/: test_smoke.py
apps/forgekit-console/: README.md  pyproject.toml
apps/forgekit-console/examples/armory-intake/: _regen_intake.py  adoption-catalog.json  intake.txt
apps/forgekit-console/examples/autopilot/: cycle.json  digest.json  execution-cycle.json  sample-executed-note.md  vault-trace.md
apps/forgekit-console/examples/bootstrap/: README.md  _regen.py  setup-bootstrap-evidence.txt
apps/forgekit-console/examples/cockpit-qa/: _regen_cockpit_qa.py  cockpit-qa.txt
apps/forgekit-console/examples/cockpit-status/: README.md  _regen.py  cockpit-status-evidence.txt
apps/forgekit-console/examples/commit-governance/: guard-smoke.txt  identity-binding.txt
apps/forgekit-console/examples/company-governance/: _regen.py  adoption-merge-lane.json
apps/forgekit-console/examples/deploy/: install-unit.txt
apps/forgekit-console/examples/design/: access-runbook.md  discomfort-packet.json  reference-packet.json  restricted-note.md  source-status.json
apps/forgekit-console/examples/discovery/: README.md  adoption-packet.json  adoption-review.md  evidence-competitor-gap.md  evidence-self-improve.md  external-intake-packet.json  idea-brief-note.md  idea-brief.json  ledger-accumulation.json  loop-report.json  sweep-digest.json
apps/forgekit-console/examples/evidence-vault/: README.md  _regen.py  evidence-vault-evidence.txt
apps/forgekit-console/examples/forge-ledger/: persist.txt
apps/forgekit-console/examples/goal/: _regen_autonomy.py  _regen_autopilot_intent.py  _regen_planning.py  approval.txt  autonomy.txt  autopilot-intent.txt  bounded-exec.txt  execute-bridge.txt  planning.txt  roundtrip.txt  surface.txt  tick.txt
apps/forgekit-console/examples/goal-continuity/: README.md  _regen.py  goal-continuity-evidence.txt
apps/forgekit-console/examples/goal-governance/: README.md  _regen.py  goal-governance-evidence.txt
apps/forgekit-console/examples/goal-visibility/: README.md  _regen.py  goal-visibility-evidence.txt
apps/forgekit-console/examples/handoff/: bkurs.json
apps/forgekit-console/examples/hephaistos-execution/: _regen_execution.py  execution.txt
apps/forgekit-console/examples/inline-accumulating-flow/: render-evidence.txt
apps/forgekit-console/examples/inline-fourbrain-submit/: qa.txt
apps/forgekit-console/examples/install-safety/: _regen.py  activation-lane.json
apps/forgekit-console/examples/integration/: scenarios.txt
apps/forgekit-console/examples/integration-wave/: _regen_e2e.py  e2e.txt
apps/forgekit-console/examples/mode-intro-scroll/: before-after-evidence.txt
apps/forgekit-console/examples/nexus-live-read/: surface.txt
apps/forgekit-console/examples/nexus-vault-bootstrap/: README.md  _regen.py  nexus-vault-bootstrap-evidence.txt
apps/forgekit-console/examples/notify/: sample-inbox.json
apps/forgekit-console/examples/ownership-audit-wt1/: audit.txt
apps/forgekit-console/examples/pm-techlead-lane/: enforce-blocked-and-risky.json  enforce-safe-authorized.json  exec-lane-in-loop.json  forge-governance-surface.json  gateway-packet.json  governance-artifact-trail.json  hephaistos-forge-governance.json  hephaistos-forge-ledger.json  lane-readiness.json  rejected-fakes.json  roundtrip-risky-operator.json  roundtrip-safe.json  specialist-briefing.json
apps/forgekit-console/examples/provider-budget/: README.md  _regen.py  _regen_cli.py  cli.txt  provider-budget-evidence.txt  surface.txt
apps/forgekit-console/examples/provider-connect/: onboarding-evidence.txt
apps/forgekit-console/examples/provider-route/: README.md  _regen.py  route-resolution-evidence.txt
apps/forgekit-console/examples/provider-runtime-core/: resolution.txt
apps/forgekit-console/examples/runbook/: bkurs-deploy.md
apps/forgekit-console/examples/runtime/: README.md  com.forgekit.runtime.plist  forgekit-runtime.service  goal-exec-serve-README.md  goal-exec-serve.txt  heartbeat-sample.json
apps/forgekit-console/examples/runtime-continuity/: _regen.py  continuity.txt
apps/forgekit-console/examples/runtime-daemon/: install-unit.txt  surface.txt
apps/forgekit-console/examples/runtime-readiness/: _regen.py  runtime-readiness-evidence.txt
apps/forgekit-console/examples/runtime-teeth/: gate-decisions.json  summary.md
apps/forgekit-console/examples/security/: blocked-public.json  drill-plan.json  k3s-isolation-runbook.md
apps/forgekit-console/examples/selection-contrast/: README.md  _regen.py  selection-contrast-evidence.txt
apps/forgekit-console/examples/selfimprove/: scan.json
apps/forgekit-console/examples/sources/: registry.json
apps/forgekit-console/examples/toolchain/: switching-evidence.txt
apps/forgekit-console/examples/tui-attach/: staging.txt
apps/forgekit-console/examples/tui-inline/: audit.txt
apps/forgekit-console/examples/tui-palette-below/: _regen_matching.py  measurements.txt  palette-matching.txt
apps/forgekit-console/examples/tui-parity-correction/: results.txt
apps/forgekit-console/examples/tui-parity-lane/: measurements-ingest.txt  measurements.txt
apps/forgekit-console/examples/tui-paste/: ingestion.txt
apps/forgekit-console/examples/tui-process-feed/: active-state.txt  timeline.txt
apps/forgekit-console/examples/tui-progress-selection/: README.md  _regen.py  progress-selection-evidence.txt
apps/forgekit-console/examples/tui-qa/: qa-results.txt
apps/forgekit-console/examples/tui-scroll/: audit.txt
apps/forgekit-console/examples/tui-ux/: redesign.txt  response-marker.txt  selection-contrast.txt
apps/forgekit-console/examples/tui-ux-v2/: measurements.txt
apps/forgekit-console/examples/usage/: README.md  summary.json  summary.md  summary.txt  usage-ledger.jsonl
apps/forgekit-console/examples/vault/: bkurs-handoff-note.md  (+1 more)
apps/planning-agent/: README.md  pyproject.toml
apps/planning-agent/tests/: test_smoke.py
(+1853 files in other folders)
