[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yule-studio-agent"
version = "0.1.0"
description = "Personal agent orchestration platform for Yule Studio workflows."
requires-python = ">=3.9"
dependencies = [
  "caldav>=1.4.0",
  "certifi>=2024.0.0",
  "discord.py>=2.4.0",
  "icalendar>=6.0.0",
]

[project.optional-dependencies]
# The Forgekit operator console (TUI). Kept out of core deps so the stdlib-only
# CI install (`pip install -e .`) stays lean; install with
# `pip install -e '.[console]'` to run the full `forgekit` TUI. Pillow is
# optional — only for live image rendering / re-baking the avatar asset; the
# shipped baked avatar renders without it.
console = [
  "textual>=0.50",
  "pillow>=10.0",
]

[project.scripts]
# `yule` = the existing engineering CLI (backward-compatible, unchanged).
# `forgekit` = the operator console; bare `forgekit` opens `forgekit console`.
yule = "yule_engineering.cli:main"
forgekit = "forgekit_console.app.main:main"

[tool.setuptools.packages.find]
# Monorepo packages live under packages/<name>/src and are discovered here so
# the root editable install (``pip install -e .``) puts them on the path. Each
# package also ships its own pyproject for standalone builds. New ``packages/*``
# entries are added to this list as they are extracted (merge-order foundation:
# agent-contracts first). ``apps/*/src`` entries are added as runnable units are
# extracted from the monolith (planning-agent first). The former monolith
# (``src/yule_orchestrator``) now lives at ``apps/engineering-agent/src/yule_engineering``.
where = [
    "apps/engineering-agent/src",
    "packages/agent-contracts/src",
    "packages/memory/src",
    "packages/llm-gateway/src",
    "packages/runtime/src",
    "apps/planning-agent/src",
    "packages/core/src",
    "packages/storage/src",
    "packages/integrations/src",
    "apps/discord-gateway/src",
    "packages/vcs/src",
    "packages/security/src",
    "packages/learning/src",
    "packages/agent-memory/src",
    "packages/agent-runtime/src",
    "apps/forgekit-console/src",
]
