[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forgekit-console"
version = "0.1.0"
description = "Forgekit operator console — a Textual TUI over the yule runtime/harness surfaces."
requires-python = ">=3.9"
# The TUI layer needs textual; the pure core (commands/data/models) is stdlib-only
# and importable + testable without it. Pillow bakes the small display avatar from
# the source portrait. textual-image renders the REAL inline avatar image via a
# terminal graphics protocol (Kitty/iTerm2/Sixel) — the primary avatar path.
dependencies = [
  "textual>=0.50",
]

[project.optional-dependencies]
# Real inline avatar image + baking. textual-image is the primary avatar renderer
# (it degrades to a small text mark when the terminal lacks graphics support).
image = ["pillow>=10.0", "textual-image>=0.6"]

[project.scripts]
forgekit = "forgekit_console.app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the avatar assets: the small baked display PNG (primary, real-image path)
# and the high-res source master it's baked from.
forgekit_console = ["assets/avatar/*.png", "assets/avatar/*.jpg"]
